# confluent-kafka

kafka-go/: .gitignore  client.properties  go.mod  util.go
kafka-python/: client.ini  consumer.py  producer.py  pyproject.toml
